--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -22,6 +22,10 @@
         <!--[if IE 8]>
             <link rel="stylesheet" href="/static/css/ie8.css">
         <![endif]-->
+        <!--HTML5 Fix for IE-->
+        <!--[if lt IE 9]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
 
         <!--JQuery-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
