Minor copy edit.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@946 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -84,7 +84,7 @@
 
                     <div class="section">
                         <h5>Plant Map</h5>
-                        <p>If you already know what group your plant is in, start with the clickable plant map to find a plant more quickly.</p>
+                        <p>If you already know what group your plant is in, start with the clickable plant map to find your plant more quickly.</p>
                         <a class="view-map-btn" href="../map/">View Map</a>
                     </div><!--Closes .section-->
 
