--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -12,19 +12,36 @@
                     <div id="breadcrumb">
                         <ul>
                             <li class="first completed"><a href="../help/start/"><img src="/static/images/icons/start.png" alt="Get Started"> Get Started</a></li>
-                            <li class="second current"><a><img src="/static/images/icons/group.png" alt="Choose Group"> Choose Group</a></li>
+                            <li class="second current"><a{% if page.number > 1 %} href="javascript:history.back(1)"{% endif %}><img src="/static/images/icons/group.png" alt="Choose Group"> Choose Group</a></li>
                             <li class="third upcoming"><a><img src="/static/images/icons/group.png" alt="Group"> Group</a></li>
                             <li class="last upcoming"><a><img src="/static/images/icons/subgroup.png" alt="Subgroup"> Subgroup</a></li>
                         </ul>
                     </div><!--Closes #breadcrumb-->
 
                     <div class="not-my-plant">
-                        <h6>My plant isn't in these groups.</h6>
-                        <a href="{{ page.next_page.get_absolute_url }}">Show me other groups</a>
+                        <h6>My plant isn't in
+                            {% if pilegroups_and_urls|length > 1 %}
+                                these groups.
+                            {% else %}
+                                this group.
+                            {% endif %}
+                        </h6>
+                        {% if page.next_page %}
+                            <a href="{{ page.next_page.get_absolute_url }}">Show me other groups</a>
+                        {% else %}
+                            <a class="back-level"
+                                href="javascript:history.back(1)">Go back one level</a>
+                        {% endif %}
                     </div><!--Closes .not-my-plant-->
 
                     <h2>Plant Identifier</h2>
-                    <h4>Is your plant in one of these groups?</h4>
+                    <h4>Is your plant in
+                        {% if pilegroups_and_urls|length > 1 %}
+                            one of these groups?
+                        {% else %}
+                            this group?
+                        {% endif %}
+                    </h4>
 
                     <div class="clearit"></div>
 
@@ -66,8 +83,19 @@
                     {% endfor %}
 
                     <div class="not-my-plant">
-                        <h6>My plant isn't in these groups.</h6>
-                        <a href="{{ page.next_page.get_absolute_url }}">Show me other groups</a>
+                        <h6>My plant isn't in
+                            {% if pilegroups_and_urls|length > 1 %}
+                                these groups.
+                            {% else %}
+                                this group.
+                            {% endif %}
+                        </h6>
+                        {% if page.next_page %}
+                            <a href="{{ page.next_page.get_absolute_url }}">Show me other groups</a>
+                        {% else %}
+                            <a class="back-level"
+                                href="javascript:history.back(1)">Go back one level</a>
+                        {% endif %}
                     </div><!--Closes .not-my-plant-->
 
                 </div><!--closes #main-->
