Apply visual design to pile/results page. Image type drop-down not working yet. Some but not all functional tests pass.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@961 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -3,7 +3,7 @@
 {% block title %}{{ pilegroup.name }}{% endblock %}
 
 {% block body %}
-    <body id="plant-id" class="claro app">
+    <body id="plant-id-2" class="claro app">
         {% include "simplekey/_header.html" %}
 
         <div class="content">
