--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -838,14 +838,14 @@ h3, h4, h5, h6 {
     text-align: center;
 }
 
-/* ordinarily this msg will have it's centering done
-by javascript, see gobotany.sk.results.notify() */
+/* Ordinarily this message will have its centering done
+   by JavaScript; see gobotany.utils.notify() */
 #notification-msg {
     background-color: #C8B560;
-    -moz-border-bottom-left-radius: 15px;
     border-bottom-left-radius: 15px;
-    -moz-border-bottom-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    -moz-border-bottom-left-radius: 15px;
+    -moz-border-bottom-right-radius: 15px;
     padding: 0.25em 0.75em;
 }
 
