--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -125,6 +125,11 @@
             </div><!--Closes .container-->
         </div><!--Closes .content-->
 
+        <div id="plant-preview" dojoType="dijit.Dialog" title="Plant Preview"
+            aria-describedby="preview-intro">
+            {% include "simplekey/plant_preview.html" %}
+        </div>
+
         {% include "simplekey/_footer.html" %}
 
         <script>
