Link to the MyPlants site in global navigation.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@964 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -9,7 +9,7 @@
                 <div class="three-col">
                     <h6>Go Botany</h6>
                     <p><a href="/simple/1/">Plant Identifier</a> |
-                        <a href="#">MyPlants</a> |
+                        <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a> |
                         <a href="/simple/advanced/">Advanced ID Tools</a> |
                         <a href="#">About</a></p>
                     <h6>Legal</h6>
